--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "i18n-js": "^4.5.1",
     "lodash-es": "^4.17.21",
     "lottie-ios": "^3.5.0",
+    "lottie-react-native": "^5.1.3",
     "protobufjs": "^7.5.4",
     "react": "19.1.0",
     "react-native": "^0.81.5",
